Доработки сериализации, режима прямого рисования.

--- a/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
+++ b/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -69,6 +70,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serializer.vb" />
     <Compile Include="TestForm.designer.vb">
       <DependentUpon>TestForm.vb</DependentUpon>
     </Compile>
