Доработки относительно скорости работы.

--- a/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
+++ b/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
@@ -125,6 +125,7 @@
     <Content Include="mOABkQ1wC1Q.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="rapp-client-gui.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
