--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -73,26 +73,27 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Display\DisplayControl.Designer.vb">
-      <DependentUpon>DisplayControl.vb</DependentUpon>
+    <Compile Include="Display\Objects\DisplayObjectsControl.Designer.vb">
+      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
     </Compile>
-    <Compile Include="Display\DisplayControl.vb">
+    <Compile Include="Display\Objects\DisplayObjectsControl.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Display\DisplayObject.vb" />
-    <Compile Include="Display\DrawBitmap.vb" />
-    <Compile Include="Overlay\BitmapObject.vb" />
+    <Compile Include="Display\Objects\DisplayObject.vb" />
+    <Compile Include="Display\Bitmap\DisplayGraphics.vb" />
+    <Compile Include="Display\Bitmap\DisplayBitmap.vb" />
+    <Compile Include="Display\Objects\BitmapObject.vb" />
     <Compile Include="PointClass\PointC.vb" />
     <Compile Include="Polygon\Line.vb" />
     <Compile Include="Matrix\BitmapConverter.vb" />
     <Compile Include="Matrix\GrayMatrix.vb" />
-    <Compile Include="Display\DrawBitmapControl.Designer.vb">
-      <DependentUpon>DrawBitmapControl.vb</DependentUpon>
+    <Compile Include="Display\Bitmap\DisplayBitmapControl.Designer.vb">
+      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
     </Compile>
-    <Compile Include="Display\DrawBitmapControl.vb">
+    <Compile Include="Display\Bitmap\DisplayBitmapControl.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Overlay\TextObject.vb" />
+    <Compile Include="Display\Objects\TextObject.vb" />
     <Compile Include="Polygon\Polygon.vb" />
     <Compile Include="PointClass\RectangleC.vb" />
     <Compile Include="Polygon\Tetragon.vb" />
@@ -116,8 +117,8 @@
     <Compile Include="Processing\Filters.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Display\DisplayControl.resx">
-      <DependentUpon>DisplayControl.vb</DependentUpon>
+    <EmbeddedResource Include="Display\Objects\DisplayObjectsControl.resx">
+      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -125,8 +126,8 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Display\DrawBitmapControl.resx">
-      <DependentUpon>DrawBitmapControl.vb</DependentUpon>
+    <EmbeddedResource Include="Display\Bitmap\DisplayBitmapControl.resx">
+      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
