НЕ ИСПОЛЬЗОВАТЬ! Зайчатки переноса параметров.

--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -83,6 +83,7 @@
     <Compile Include="Display\Bitmap\DisplayGraphics.vb" />
     <Compile Include="Display\Bitmap\DisplayBitmap.vb" />
     <Compile Include="Display\Objects\BitmapObject.vb" />
+    <Compile Include="Display\Objects\ParametersDictionary.vb" />
     <Compile Include="Matrix\CommonMatrix.vb" />
     <Compile Include="Matrix\RGBMatrix.vb" />
     <Compile Include="PointClass\PointC.vb" />
