--- a/Bwl.Imaging.WinForms/Bwl.Imaging.WinForms.vbproj
+++ b/Bwl.Imaging.WinForms/Bwl.Imaging.WinForms.vbproj
@@ -1,35 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7BF41D8B-B121-49C3-AF64-6182A227CD78}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>bwl.Imaging.Test</RootNamespace>
-    <AssemblyName>bwl.Imaging.Test</AssemblyName>
+    <ProjectGuid>{CF1BA304-7402-46B4-9D06-AB226BC72293}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <StartupObject>
+    </StartupObject>
+    <RootNamespace>Bwl.Imaging</RootNamespace>
+    <AssemblyName>Bwl.Imaging.WinForms</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>WindowsForms</MyType>
+    <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>bwl.Imaging.Test.xml</DocumentationFile>
+    <OutputPath>..\debug\dll\</OutputPath>
+    <DocumentationFile>Bwl.Imaging.WinForms.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>bwl.Imaging.Test.xml</DocumentationFile>
+    <OutputPath>..\release\dll\</OutputPath>
+    <DocumentationFile>Bwl.Imaging.WinForms.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <OptionExplicit>On</OptionExplicit>
@@ -43,20 +46,11 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>bwl.Imaging.Test.My.MyApplication</StartupObject>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -67,17 +61,29 @@
     <Import Include="System.Diagnostics" />
     <Import Include="System.Drawing" />
     <Import Include="System.Linq" />
+    <Import Include="System.Windows.Forms" />
     <Import Include="System.Xml.Linq" />
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Serializer.vb" />
-    <Compile Include="TestForm.designer.vb">
-      <DependentUpon>TestForm.vb</DependentUpon>
+    <Compile Include="Display\Bitmap\DisplayBitmap.vb" />
+    <Compile Include="Display\Bitmap\DisplayBitmapControl.Designer.vb">
+      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
     </Compile>
-    <Compile Include="TestForm.vb">
-      <SubType>Form</SubType>
+    <Compile Include="Display\Bitmap\DisplayBitmapControl.vb">
+      <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Display\Bitmap\DisplayGraphics.vb" />
+    <Compile Include="Display\Objects\BitmapObject.vb" />
+    <Compile Include="Display\Objects\DisplayObject.vb" />
+    <Compile Include="Display\Objects\DisplayObjectsControl.Designer.vb">
+      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Display\Objects\DisplayObjectsControl.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Display\Objects\ParametersDictionary.vb" />
+    <Compile Include="Display\Objects\TextObject.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -95,8 +101,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="TestForm.resx">
-      <DependentUpon>TestForm.vb</DependentUpon>
+    <EmbeddedResource Include="Display\Bitmap\DisplayBitmapControl.resx">
+      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Display\Objects\DisplayObjectsControl.resx">
+      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -117,20 +126,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bwl.Imaging.WinForms\Bwl.Imaging.WinForms.vbproj">
-      <Project>{cf1ba304-7402-46b4-9d06-ab226bc72293}</Project>
-      <Name>Bwl.Imaging.WinForms</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\bwl.Imaging\Bwl.Imaging.vbproj">
+    <ProjectReference Include="..\Bwl.Imaging\Bwl.Imaging.vbproj">
       <Project>{33e5778d-caa3-42b6-b144-9ae1da4a00b3}</Project>
       <Name>Bwl.Imaging</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="mOABkQ1wC1Q.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="rapp-client-gui.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
