--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -51,14 +51,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -74,38 +68,21 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Display\Objects\DisplayObjectsControl.Designer.vb">
-      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Display\Objects\DisplayObjectsControl.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Display\Objects\DisplayObject.vb" />
-    <Compile Include="Display\Bitmap\DisplayGraphics.vb" />
-    <Compile Include="Display\Bitmap\DisplayBitmap.vb" />
-    <Compile Include="Display\Objects\BitmapObject.vb" />
-    <Compile Include="Display\Objects\ParametersDictionary.vb" />
     <Compile Include="FloatMatrix\CommonFloatMatrix.vb" />
     <Compile Include="FloatMatrix\GrayFloatMatrix.vb" />
     <Compile Include="FloatMatrix\RGBFloatMatrix.vb" />
     <Compile Include="Matrix\CommonMatrix.vb" />
     <Compile Include="Matrix\RGBMatrix.vb" />
+    <Compile Include="ParametersDictionary.vb" />
     <Compile Include="PointClass\PointC.vb" />
     <Compile Include="Polygon\Line.vb" />
     <Compile Include="Matrix\BitmapConverter.vb" />
     <Compile Include="Matrix\GrayMatrix.vb" />
-    <Compile Include="Display\Bitmap\DisplayBitmapControl.Designer.vb">
-      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Display\Bitmap\DisplayBitmapControl.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Display\Objects\TextObject.vb" />
     <Compile Include="Polygon\Polygon.vb" />
     <Compile Include="PointClass\RectangleC.vb" />
     <Compile Include="Polygon\Tetragon.vb" />
     <Compile Include="Polygon\Vector.vb" />
-    <Compile Include="Tools\Extensions.vb" />
+    <Compile Include="Processing\Extensions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -123,22 +100,16 @@
     </Compile>
     <Compile Include="Processing\BrightnessStats.vb" />
     <Compile Include="Processing\Filters.vb" />
-    <Compile Include="Tools\ImagingMath.vb" />
-    <Compile Include="Tools\MatrixTools.vb" />
-    <Compile Include="Tools\VectorTools.vb" />
+    <Compile Include="Processing\ImagingMath.vb" />
+    <Compile Include="Processing\MatrixTools.vb" />
+    <Compile Include="Processing\VectorTools.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Display\Objects\DisplayObjectsControl.resx">
-      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Display\Bitmap\DisplayBitmapControl.resx">
-      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -155,9 +126,7 @@
   <ItemGroup>
     <Service Include="{94E38DFF-614B-4CBD-B67C-F211BB35CE8B}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Capture\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
