--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -59,30 +59,27 @@
     <Import Include="System" />
     <Import Include="System.Collections" />
     <Import Include="System.Collections.Generic" />
-    <Import Include="System.Data" />
     <Import Include="System.Diagnostics" />
     <Import Include="System.Drawing" />
     <Import Include="System.Drawing.Imaging" />
     <Import Include="System.Linq" />
-    <Import Include="System.Windows.Forms" />
-    <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FloatMatrix\CommonFloatMatrix.vb" />
-    <Compile Include="FloatMatrix\GrayFloatMatrix.vb" />
-    <Compile Include="FloatMatrix\RGBFloatMatrix.vb" />
+    <Compile Include="Matrix\FloatMatrix\CommonFloatMatrix.vb" />
+    <Compile Include="Matrix\FloatMatrix\GrayFloatMatrix.vb" />
+    <Compile Include="Matrix\FloatMatrix\RGBFloatMatrix.vb" />
     <Compile Include="Matrix\CommonMatrix.vb" />
     <Compile Include="Matrix\RGBMatrix.vb" />
-    <Compile Include="ParametersDictionary.vb" />
-    <Compile Include="PointClass\PointC.vb" />
-    <Compile Include="Polygon\Line.vb" />
+    <Compile Include="Geometry\ParametersDictionary.vb" />
+    <Compile Include="Geometry\Point\PointC.vb" />
+    <Compile Include="Geometry\Polygon\Line.vb" />
     <Compile Include="Matrix\BitmapConverter.vb" />
     <Compile Include="Matrix\GrayMatrix.vb" />
-    <Compile Include="Polygon\Polygon.vb" />
-    <Compile Include="PointClass\RectangleC.vb" />
-    <Compile Include="Polygon\Tetragon.vb" />
-    <Compile Include="Polygon\Vector.vb" />
-    <Compile Include="Processing\Extensions.vb" />
+    <Compile Include="Geometry\Polygon\Polygon.vb" />
+    <Compile Include="Geometry\Point\RectangleC.vb" />
+    <Compile Include="Geometry\Polygon\Tetragon.vb" />
+    <Compile Include="Geometry\Polygon\Vector.vb" />
+    <Compile Include="MatrixProcessing\Extensions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -98,11 +95,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Processing\BrightnessStats.vb" />
-    <Compile Include="Processing\Filters.vb" />
-    <Compile Include="Processing\ImagingMath.vb" />
-    <Compile Include="Processing\MatrixTools.vb" />
-    <Compile Include="Processing\VectorTools.vb" />
+    <Compile Include="MatrixProcessing\BrightnessStats.vb" />
+    <Compile Include="MatrixProcessing\Filters.vb" />
+    <Compile Include="MatrixProcessing\ImagingMath.vb" />
+    <Compile Include="MatrixProcessing\MatrixTools.vb" />
+    <Compile Include="GeometryProcessing\VectorTools.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
