--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -105,6 +105,7 @@
     <Compile Include="PointClass\RectangleC.vb" />
     <Compile Include="Polygon\Tetragon.vb" />
     <Compile Include="Polygon\Vector.vb" />
+    <Compile Include="Processing\MoveDetector.vb" />
     <Compile Include="Tools\Extensions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
