--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -153,6 +153,12 @@
   <ItemGroup>
     <None Include="Resources\rgbw25.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\grayProbeS4.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rgbProbeS4.bmp" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
