RawFrames и HDR перенесен сюда из Tools.IDS + Unmanaged версия HDR1

--- a/Bwl.Imaging.Unsafe/Bwl.Imaging.Unsafe.csproj
+++ b/Bwl.Imaging.Unsafe/Bwl.Imaging.Unsafe.csproj
@@ -47,6 +47,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="RawFrameFunctions.cs" />
     <Compile Include="UnsafeFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
