--- a/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
+++ b/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
@@ -47,6 +47,10 @@
     <StartupObject>bwl.Imaging.Test.My.MyApplication</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Bwl.Framework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Bwl.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -67,10 +71,17 @@
     <Import Include="System.Diagnostics" />
     <Import Include="System.Drawing" />
     <Import Include="System.Linq" />
+    <Import Include="System.Windows.Forms" />
     <Import Include="System.Xml.Linq" />
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HdrTestForm.designer.vb">
+      <DependentUpon>HdrTestForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="HdrTestForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MoveDetectorTest.Designer.vb">
       <DependentUpon>MoveDetectorTest.vb</DependentUpon>
     </Compile>
@@ -113,6 +124,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="HdrTestForm.resx">
+      <DependentUpon>HdrTestForm.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MoveDetectorTest.resx">
       <DependentUpon>MoveDetectorTest.vb</DependentUpon>
     </EmbeddedResource>
@@ -144,6 +158,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Bwl.Framework.dll" />
     <Content Include="mOABkQ1wC1Q.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
