Нормальный формат RAW-файлов с доп. полями и в бинарном формате.

--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -65,6 +65,7 @@
     <Import Include="System.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RawFrames\BlobContainer.vb" />
     <Compile Include="RawFrames\RawIntFrame.vb" />
     <Compile Include="RawFrames\RawIntFrameConverters.vb" />
     <Compile Include="Matrix\BitmapOperations.vb" />
