--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -65,6 +65,9 @@
     <Import Include="System.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Color\ColorMatrix.vb" />
+    <Compile Include="Color\ColorMatrixHSV.vb" />
+    <Compile Include="Color\ColorMatrixRGB.vb" />
     <Compile Include="Color\HSV.vb" />
     <Compile Include="Color\RGB.vb" />
     <Compile Include="RawFrames\BlobContainer.vb" />
