--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -82,6 +82,7 @@
     <Import Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitmapInfoTests.vb" />
     <Compile Include="MatrixTests.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
